--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^6.28.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.13"
   },
-  "devDependencies": { "@babel/plugin-proposal-private-property-in-object": "^VERSION" 
-},
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.14.5"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
