--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.14.5"
+    "@babel/plugin-proposal-private-property-in-object": "^7.14.5",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@testing-library/user-event": "^14.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
